# ccpp-framework

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODEOWNERS  Dockerfile  LICENSE  README.md  ccpp-pylint-config.toml  ccpp_prebuild_config_cam_kessler.py  pytest.ini
cmake/: FindOpenMP_Fortran.cmake  README_FindOpenMP_Fortran.txt  add_sources.cmake  ccpp_capgen.cmake  code_coverage.cmake  export_dynamic.cmake
doc/: CMakeLists.txt  Doxyfile.in  standard_names.xml  write_standard_name_table.py
doc/HelloWorld/: CMakeLists.txt  Makefile.example  README.md  hello_scheme.F90  hello_scheme_files.txt  hello_world_host.F90  hello_world_mod.F90  hello_world_suite.xml  mkcaplocal.sh  temp_adjust.F90
examples/: suite.xsd  suite_DUMMY.xml  suite_DUMMY_scm.xml  suite_DUMMY_scm2.xml  suite_EXAMPLE.xml  suite_FV3_test.xml  suite_FV3_test_GF.xml  suite_FV3_test_gfdlmp.xml  suite_FV3_test_h2ophys.xml  suite_FV3_test_memcheck.xml  suite_FV3_test_thompson.xml  suite_FV3_test_wsm6.xml  suite_GFS_IPD.xml  suite_GFS_operational_2017.xml  suite_GFS_operational_2017_scm.xml  suite_GFS_operational_2017_scm_prescribed_surface.xml  suite_SCM.xml  suite_scm_GFS_test.xml  suite_scm_GFS_test_prescribed_surface.xml  suite_scm_test.xml
logging/: logging.F90
schema/: host_registry_v1_0.xsd  standard_names.xsd  suite_v1_0.xsd
schemes/: CMakeLists.txt  calls.txt  cnvc90.xml  common.py  dcyc2t3.xml  edmf.xml  edmf_cap.f90  get_phi_fv3.xml  get_prs_fv3.xml  gfs_calpreciptype.xml  gfs_mp_generic_post.xml  gfs_pbl_generic.xml  gfs_pbl_generic_post.xml  gfs_pbl_generic_pre.xml  gscond.xml  gwdc.xml  gwdc_post.xml  gwdc_pre.xml  gwdps.xml  gwdps_post.xml  gwdps_pre.xml  longnames_autocheck.py  lsmnoah.xml  lwrad.xml  mkcap  mkcap.py  parse_fortran.py  parse_scheme_table.py  precpd.xml  process_tables.py  rayleigh_damp.xml  sasasdeep.xml  sasasshal.xml  sfc_diag.xml  sfc_ex_coef.xml  sfc_nst.xml  sfc_nst_post.xml  sfc_nst_pre.xml  swrad.xml
schemes/check/: CMakeLists.txt  ccpp_prebuild_config.py  check_noop.f90  check_test.f90  nan.f90  noop.f90  scheme.xml  test.f90
scripts/: ccpp_capgen.py  ccpp_database_obj.py  ccpp_datafile.py  ccpp_fortran_to_metadata.py  ccpp_prebuild.py  ccpp_prebuild_config_FV3.py  ccpp_prebuild_config_FV3v0.py  ccpp_prebuild_config_FV3v1.py  ccpp_prebuild_config_MICM.py  ccpp_prebuild_config_MusicBox.py  ccpp_prebuild_config_MusicBox_3component.py  ccpp_prebuild_config_MusicBox_terminator.py  ccpp_prebuild_config_MusicBox_user-defined.py  ccpp_prebuild_config_SCM.py  ccpp_prebuild_config_TEST.py  ccpp_prebuild_config_ibox.py  ccpp_state_machine.py  ccpp_suite.py  code_block.py  (+25 more)
src/: CMakeLists.txt  atm_drv.f90  ccpp.F90  ccpp.f90  ccpp_api.F90  ccpp_constituent_prop_mod.F90  ccpp_dl.F90  ccpp_dl.c  ccpp_errors.F90  ccpp_errors.f90  ccpp_fcall.F90  ccpp_fcall.f90  ccpp_fields.F90  ccpp_fields.f90  ccpp_fields_idx.c  ccpp_fields_idx.h  ccpp_hash_table.F90  ccpp_hashable.F90  ccpp_ipd.c  ccpp_ipd.f90  ccpp_ipd.h  ccpp_memory.c  ccpp_phy_infra.f90  ccpp_scheme.F90  ccpp_scheme_utils.F90  ccpp_strings.F90  ccpp_strings.f90  ccpp_suite.F90  ccpp_suite.f90  ccpp_types.F90  ccpp_types.f90  ccpp_utils.c  ccpp_utils.h  ccpp_xml.F90  ccpp_xml.c  ccpp_xml.f90  ccpp_xml.h  dummy.f90  errors.f90  gf.f90  (+13 more)
src/ipd/: ipd.f90  ipd_phy.c  ipd_phy.h
src/mynn/: mynnpbl.f90  mynnsfc.f90
src/phy/: phy_field_idx.c  phy_fields.f90  phy_infra.f90
src/rrtmg/: rrtmglw.f90  rrtmgsw.f90
src/schemes/: CMakeLists.txt  bc.f90  dummy.f90  dummy_scm.f90  dummy_scm2.f90  gf.f90  pbl.f90  ruclsm.f90  sfc.f90  thompsonaero.f90
src/schemes/check/: CMakeLists.txt  nan.f90  test.f90
src/schemes/mynn/: CMakeLists.txt  mynnpbl.f90  mynnsfc.f90
src/schemes/rrtmg/: CMakeLists.txt  rrtmglw.f90  rrtmgsw.f90
src/schemes/scm/: dummy_scm.f90  dummy_scm2.f90
src/tests/: CMakeLists.txt  suite_check.xml  suite_check_1.xml  suite_check_2.xml  suite_check_3.xml  suite_noop_1.xml  suite_noop_2.xml  suite_noop_3.xml  suite_noop_4.xml  suite_noop_5.xml  suite_noop_6.xml  suite_noop_7.xml  suite_noop_8.xml  suite_noop_9.xml  suite_test_1.xml  suite_test_2.xml  suite_test_3.xml  suite_test_4.xml  suite_test_6.xml  test_check.f90  test_dummy.f90  test_fields.c  test_init_finalize.f90  test_init_fini.f90  test_xml.f90
stub/: CMakeLists.txt  README.md  ccpp_prebuild_config.py  data.F90  stub.F90  suite_stub.xml
test/advection_test/: CMakeLists.txt  advection_test_reports.py  apply_constituent_tendencies.F90  cld_ice.F90  cld_liq.F90  cld_suite.xml  cld_suite_error.xml  cld_suite_files.txt  cld_suite_files_error.txt  const_indices.F90  dlc_liq.F90  run_test  test_advection_host.pf  test_host.F90  test_host_data.F90  test_host_mod.F90  test_reports.py
test/capgen_test/: CMakeLists.txt  README.md  capgen_test_reports.py  environ_conditions.F90  make_ddt.F90  run_test  setup_coeffs.F90  temp_adjust.F90  temp_calc_adjust.F90  temp_scheme_files.txt  temp_set.F90  temp_suite.xml  test_capgen_host.pf  test_host.F90  test_host_data.F90  test_host_mod.F90  test_reports.py
test/ddthost_test/: CMakeLists.txt  ddt_suite.xml  ddt_suite_files.txt  ddthost_test_reports.py  environ_conditions.F90  host_ccpp_ddt.F90  make_ddt.F90  run_test  setup_coeffs.F90  temp_adjust.F90  temp_calc_adjust.F90  temp_scheme_files.txt  temp_set.F90  temp_suite.xml  test_ddt_host.pf  test_host.F90  test_host_data.F90  test_host_mod.F90  test_reports.py
test/var_compatibility_test/: CMakeLists.txt  README.md  effr_calc.F90  effr_diag.F90  effr_post.F90  effr_pre.F90  module_rad_ddt.F90  rad_lw.F90  rad_sw.F90  run_test  test_host.F90  test_host_data.F90  test_host_mod.F90  test_reports.py  test_var_compatibility_integration.pf  var_compatibility_files.txt  var_compatibility_suite.xml  var_compatibility_test_reports.py
test_prebuild/test_blocked_data/: CMakeLists.txt  README.md  blocked_data_scheme.F90  ccpp_prebuild_config.py  main.F90  run_test.sh  suite_blocked_data_suite.xml
test_prebuild/test_mpi_test/: CMakeLists.txt  README.md  ccpp_prebuild_config.py  data.F90  main.F90  mpi_test_scheme.F90  suite_mpi_test_suite.xml
(+237 files in other folders)
